--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandeep Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+
 </head>
 
 <body>
@@ -21,10 +23,8 @@
             <a href="#education">
                 <li>EDUCATION</li>
             </a>
-            <a href="">
-                <li>SKILLS</li>
-            </a>
-            <a href="">
+
+            <a href="#contact">
                 <li>CONTACT</li>
             </a>
         </ol>
@@ -90,6 +90,31 @@
         </table>
 
     </section>
+    <section id="contact" class="contact-section">
+        <div class="contact-section-header">
+            <h2>Let's work together...</h2>
+            <p>How do you take your coffee?</p>
+        </div>
+        <div class="contact-links">
+            <a href="https://www.linkedin.com/in/sandeep-b-t-b74a691b1/" target="_blank" class="btn contact-details">
+                <i class="fab fa-linkedin"></i> Linked In
+            </a>
+            <a id="profile-link" href="https://github.com/imSandeepbt" target="_blank" class="btn contact-details">
+                <i class="fab fa-github"></i> GitHub
+            </a>
+            <a id="profile-link" href="https://www.instagram.com/sandeep7878700/" target="_blank" class="btn contact-details">
+                <i class="fab fa-instagram"></i> Instagram
+            </a>
+            <a href="https://twitter.com/imSandeepbt" target="_blank" class="btn contact-details">
+                <i class="fab fa-twitter"></i> Twitter
+            </a>
+        </div>
+    </section>
+
+    <footer>
+        <h1>Designed by Sandeep</h1>
+    </footer>
+
 </body>
 
 </html>
