--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
         <div class="container">
             <div class="container1"><img src="https://t3.ftcdn.net/jpg/03/71/76/64/360_F_371766448_2M5arF5MIev80GIA8b6wSecGPQgoYeRQ.jpg" alt=""></div>
             <div class="container2">
-                <p>My name is Sandeep. I'm from Chitradurga currently staying in Bengaluru. I completed my Computer Science Engine
+                <p>My name is Sandeep. I'm from Chitradurga currently staying in Bengaluru.
                 </p>
             </div>
         </div>
     </section>
     <section id="projects">
+
         <h1>PROJECTS</h1>
 
         <table class="table " border="1px" cellspacing="1px" cellpadding=" 20px">
@@ -73,17 +74,17 @@
                 <th>Percentage</th>
             </tr>
             <tr>
-                <td>10</td>
+                <th>10</th>
                 <td>Don Bosco High School Chitradurga</td>
                 <td>78.56%</td>
             </tr>
             <tr>
-                <td>12</td>
+                <th>12</th>
                 <td>Don Bosco PU College Chitradurga</td>
                 <td>86%</td>
             </tr>
             <tr>
-                <td>B.E</td>
+                <th>B.E</th>
                 <td>R R Institute of Technology, Bengaluru</td>
                 <td>7.41 CGPA</td>
             </tr>
