--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
             </a>
         </ol>
     </nav>
-    <br><br>
+
     <section id="welcome">
+        <br><br>
         <h1>
             Hey i am Sandeep
         </h1>
@@ -39,7 +40,7 @@
     <section id="aboutme">
         <h1>ABOUT ME</h1>
         <div class="container">
-            <div class="container1"><img src="https://t3.ftcdn.net/jpg/03/71/76/64/360_F_371766448_2M5arF5MIev80GIA8b6wSecGPQgoYeRQ.jpg" alt=""></div>
+            <div class="container1"><img src="https://media.licdn.com/dms/image/D5603AQFrYeyWEGN4og/profile-displayphoto-shrink_400_400/0/1663590953227?e=1716422400&v=beta&t=e-BZ3jRsi_XMmlZTSyHnKylf3Q9smd4kTONnxb8pT-E" alt=""></div>
             <div class="container2">
                 <p>My name is Sandeep. I'm from Chitradurga currently staying in Bengaluru.
                 </p>
@@ -47,7 +48,7 @@
         </div>
     </section>
     <section id="projects">
-
+        <br><br> <br><br>
         <h1>PROJECTS</h1>
 
         <table class="table " border="1px" cellspacing="1px" cellpadding=" 20px">
@@ -65,8 +66,10 @@
             </tr>
         </table>
     </section>
+
     <section id="education">
-        <h1>Education</h1>
+        <br><br> <br><br>
+        <h1>EDUCATION</h1>
         <table class="table " border="1px" cellspacing="1px" cellpadding=" 20px">
             <tr>
                 <th>Qualification</th>
